jasper/force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback</label>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>