jasper/force-app/main/default/objects/Customer_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Feedbacks</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>