jasper/force-app/main/default/objects/Customer_Feedback__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Customer Handling</fullName>
            </value>
            <value>
                <fullName>Amenities/Facilities</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>