jasper/force-app/main/default/objects/Customer_Feedback__c/fields/Resolution_Provided__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Provided__c</fullName>
    <label>Resolution Provided</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>